Fix: 일정 조회 기능 수정
일정 조회 기능 수정


Former-commit-id: 18479662579b8cd294600c7177b099f506db9d17